--- a/DemoApp/MainWindow.xaml
+++ b/DemoApp/MainWindow.xaml
@@ -14,6 +14,19 @@
         <Style TargetType="TextBlock">
             <Setter Property="Opacity" Value="0.5" />
         </Style>
+        <Style x:Key="styledDockPanelSplitter" TargetType="dpsplit:DockPanelSplitter"
+               BasedOn="{StaticResource {x:Type dpsplit:DockPanelSplitter}}">
+            <Setter Property="Background" Value="Orange" />
+        </Style>
+        <Style TargetType="GridSplitter" BasedOn="{StaticResource {x:Type GridSplitter}}">
+            <Setter Property="MinWidth" Value="5"/>
+            <Setter Property="MinHeight" Value="5"/>
+            <Setter Property="Background" Value="White"/>
+        </Style>
+        <Style x:Key="styledGridSplitter" TargetType="GridSplitter"
+               BasedOn="{StaticResource {x:Type GridSplitter}}">
+            <Setter Property="Background" Value="Orange" />
+        </Style>
     </Window.Resources>
     <UniformGrid Rows="1">
         <GroupBox Header="DockPanel">
@@ -40,7 +53,7 @@
                                    Opacity="0.5"/>
                     </StackPanel>
                 </Border>
-                <dpsplit:DockPanelSplitter DockPanel.Dock="Bottom"/>
+                <dpsplit:DockPanelSplitter Style="{StaticResource styledDockPanelSplitter}" DockPanel.Dock="Bottom"/>
 
                 <Border Background="DarkGray" DockPanel.Dock="Bottom">
                     <TextBlock Opacity="1" Text="Double-click a splitter to reset its position" TextWrapping="Wrap"/>
@@ -49,13 +62,6 @@
         </GroupBox>
         <GroupBox Header="Grid for comparison">
             <Grid>
-                <Grid.Resources>
-                    <Style TargetType="GridSplitter" BasedOn="{StaticResource {x:Type GridSplitter}}">
-                        <Setter Property="MinWidth" Value="5"/>
-                        <Setter Property="MinHeight" Value="5"/>
-                        <Setter Property="Background" Value="White"/>
-                    </Style>
-                </Grid.Resources>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="80"/>
                     <ColumnDefinition/>
@@ -88,7 +94,7 @@
                         <TextBlock Text="MinHeight: 50" Opacity="0.5"/>
                     </StackPanel>
                 </Border>
-                <GridSplitter VerticalAlignment="Top" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch"/>
+                <GridSplitter Style="{StaticResource styledGridSplitter}" VerticalAlignment="Top" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Stretch"/>
 
                 <Border Background="DarkGray" Grid.Column="1" Grid.Row="1"/>
             </Grid>
